# srs

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .typos.toml  AGENTS.md  BENCHMARKING.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LINKER_SCRIPT_SUPPORT.md  README.md  RELEASING.md  bootstrap.toml  build-sld.sh  build.sh  cackle.toml  cargo-srs.sh  default.nix  install.sh  prove-uv.sh  with-sld.sh
linker-trace/: Cargo.toml
linker-utils/: Cargo.toml
linker-utils/src/: aarch64.rs  elf.rs  loongarch64.rs  relaxation.rs
sld/: .gitignore  .gitmodules  AGENTS.md  BENCHMARKING.md  Cargo.toml  PACKAGING.md  README.md  build.rs  flake.nix  ld
sld/.github/workflows/: check-fmt.yml  check-lint.yml  check-minimal-versions.yml  check-nix.yml
sld/benchmarks/: lemp9.toml  macOS linker benchmarks.md  macos.toml  ryzen-9955hx.md  ryzen-9955hx.toml
sld/benchmarks/runner/: Cargo.toml
sld/benchmarks/runner/src/: benchmarking.rs  config.rs  reporting.rs
sld/context/: benchmarking-memory-consumption.md  incremental-design.md  incremental-linking.md  incremental-performance.md  output-comparison-findings.md  project-overview.md  testing-in-apple-containers.md  verifying-correctness.md
sld/docker/: fedora.Dockerfile  gentoo.Dockerfile  nix.Dockerfile  ubuntu.Dockerfile
sld/fakes-debug/: README
sld/libsld/: Cargo.toml
sld/libsld/src/: alignment.rs  args.rs  compression.rs  diagnostics.rs  diff.rs  dwarf_address_info.rs  elf.rs  elf_writer.rs  error.rs  export_list.rs  file_kind.rs  file_writer.rs  gc_stats.rs  incremental.rs  input_data.rs  layout.rs  layout_rules.rs  lib.rs  linker_plugins.rs  macho.rs  macho_writer.rs  output_section_id.rs  output_section_part_map.rs  parsing.rs  part_id.rs  platform.rs  resolution.rs  save_dir.rs  subprocess.rs  symbol_db.rs  thunks.rs  timing.rs  verification.rs  wasm.rs  wasm_wasm32.rs
sld/libsld/src/args/: elf.rs  macho.rs  wasm.rs
sld/linker-diff/: Cargo.toml  README.md
sld/linker-diff/src/: asm_diff.rs  eh_frame_diff.rs  header_diff.rs  lib.rs  version_diff.rs
sld/linker-trace/: README.md
sld/linker-utils/: README.md
sld/linker-utils/src/: riscv64.rs
sld/nix/: wrappers.nix
sld/scripts/: validate-top-crates.py
sld/sld/: Cargo.toml  README.md
sld/sld/tests/: integration_tests.rs
sld/sld/tests/external_tests/: mod.rs  mold_skip_tests.toml  mold_tests.rs
sld/src/: main.rs
sld/tests/sources/elf/as-needed-weak/: as-needed-weak.c
sld/tests/sources/elf/backtrace/: backtrace.c
sld/tests/sources/elf/copy-relocations/: copy-relocations.c
sld/tests/sources/elf/custom-section/: custom-section.c
sld/tests/sources/elf/eh-frame/: eh-frame.c
sld/tests/sources/elf/empty-section-alignment/: sections.s
sld/tests/sources/elf/exception/: exception.cc
sld/tests/sources/elf/exclude-libs-selective/: exclude-libs-selective.c
sld/tests/sources/elf/export-dynamic/: export-dynamic.c
sld/tests/sources/elf/incremental/: incremental-unchanged.c  incremental.c
sld/tests/sources/elf/incremental-added-input/: incremental-added-input-unchanged.c  incremental-added-input.c
sld/tests/sources/elf/incremental-archive/: incremental-archive-member.c  incremental-archive.c
sld/tests/sources/elf/incremental-dynamic-relocation/: incremental-dynamic-relocation-unchanged.c
sld/tests/sources/elf/incremental-dynamic-relocation-added/: incremental-dynamic-relocation-added-shared.c  incremental-dynamic-relocation-added-unchanged.c
sld/tests/sources/elf/incremental-dynamic-relocation-removed/: incremental-dynamic-relocation-removed-unchanged.c  incremental-dynamic-relocation-removed.c
sld/tests/sources/elf/incremental-eh-frame-added/: incremental-eh-frame-added.c
sld/tests/sources/elf/incremental-eh-frame-removed/: incremental-eh-frame-removed-unchanged.c  incremental-eh-frame-removed.c
sld/tests/sources/elf/incremental-grow/: incremental-grow.c
sld/tests/sources/elf/incremental-grow-fallback/: incremental-grow-fallback-data.s  incremental-grow-fallback.c
sld/tests/sources/elf/incremental-merge-string-scattered/: incremental-merge-string-scattered-value.s  incremental-merge-string-scattered.c
sld/tests/sources/elf/incremental-merge-string-shared/: incremental-merge-string-shared-a.s  incremental-merge-string-shared.c
sld/tests/sources/elf/incremental-no-gc/: incremental-no-gc-unchanged.c  incremental-no-gc.c
sld/tests/sources/elf/incremental-relocated-data/: incremental-relocated-data-unchanged.c
sld/tests/sources/elf/incremental-relocation-target-moved/: incremental-relocation-target-moved.c
sld/tests/sources/elf/incremental-removed-input/: incremental-removed-input-extra.c  incremental-removed-input.c
sld/tests/sources/elf/incremental-reordered-inputs/: incremental-reordered-inputs-b.c  incremental-reordered-inputs.c
sld/tests/sources/elf/incremental-rodata/: incremental-rodata-value.c
sld/tests/sources/elf/incremental-section-list/: incremental-section-list-unchanged.c  incremental-section-list.c
sld/tests/sources/elf/incremental-source/: incremental-source-value.c  incremental-source.c
sld/tests/sources/elf/incremental-text/: incremental-text-value.c
sld/tests/sources/elf/incremental-thin-archive/: incremental-thin-archive-member.c
sld/tests/sources/elf/init-test/: init-test.c
sld/tests/sources/elf/libc-ifunc/: libc-ifunc.c
sld/tests/sources/elf/libc-integration/: libc-integration.c
sld/tests/sources/elf/link-args/: link-args.c
sld/tests/sources/elf/linker-script/: linker-script.c
sld/tests/sources/elf/range-extension-thunks/: range-extension-thunks.c
sld/tests/sources/elf/relocation-in-non-alloc-section/: relocation-in-non-alloc-section.s
sld/tests/sources/elf/relro/: relro.c
sld/tests/sources/elf/section-start-thunks/: section-start-thunks.s
sld/tests/sources/elf/source-info-from-debug/: source-info-from-debug.c
sld/tests/sources/elf/ttext-layout/: ttext-layout.c
sld/tests/sources/elf/unresolved-symbols-object/: unresolved-symbols-object.c
sld/tests/sources/elf/versioned-script-symbol/: versioned-script-symbol.c
(+270 files in other folders)
