[package]
name = "linker-trace"
description = "Data structures for storing trace outputs from the sld linker"
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
postcard.workspace = true
serde.workspace = true

[lints]
workspace = true
