[package]
name = "linker-utils"
description = "Code shared by libsld and linker-diff"
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
derive_more.workspace = true
leb128.workspace = true
object.workspace = true
paste.workspace = true

[lints]
workspace = true
