[package]
name = "sld-linker"
description = "A very fast linker for Linux"
version.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true
autotests = false

[[bin]]
name = "sld"
path = "src/main.rs"

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
harness = false

[dependencies]
libsld = { path = "../libsld", version = "2026.5.20" }

# This is off by default, since it doesn't appear to help. However, if you're linking against musl
# libc, which has a comparatively slow allocator, then enabling this does help. To enable this,
# build with `--features mimalloc`.
mimalloc = { workspace = true, optional = true }

dhat = { workspace = true, optional = true }

[dev-dependencies]
ar.workspace = true
itertools.workspace = true
foldhash.workspace = true
gimli.workspace = true
hex.workspace = true
linker-diff.path = "../linker-diff"
linker-layout.path = "../linker-layout"
libloading.workspace = true
libtest-mimic =  { workspace = true }
object.workspace = true
os_info.workspace = true
regex.workspace = true
serde.workspace = true
serde-keyvalue = { workspace =  true }
strum.workspace = true
tempfile.workspace = true
toml.workspace = true
which.workspace = true

[target.'cfg(not(target_os = "wasi"))'.dev-dependencies]
wait-timeout.workspace = true

[features]
default = ["fork"]

fork = ["libsld/fork"]

plugins = ["libsld/plugins"]

perfetto = ["libsld/perfetto"]

wasm = ["libsld/wasm"]

# external tests
external_tests = ["mold_tests"]
mold_tests = []
