[package]
name = "benchmark-runner"
description = "Runs benchmarks for the sld linker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
clap.workspace = true
indicatif.workspace = true
hex.workspace = true
object.workspace = true
postcard.workspace = true
serde.workspace = true
toml.workspace = true
wait4.workspace = true
zstd.workspace = true

[dev-dependencies]
tempfile.workspace = true
